fixed word wrapping issue on iphone

--- a/content/themes/clonium/assets/css/screen.css
+++ b/content/themes/clonium/assets/css/screen.css
@@ -900,10 +900,6 @@ table td {
         line-height: 1.6em;
     }
 
-    .post img {
-        max-width: 250px;
-    }
-
     .post-template .post {
         padding-bottom: 1rem;
     }
@@ -1023,6 +1019,10 @@ table td {
 
     .post-template .post-header {
         padding: 30px 0;
+    }
+
+    .post-title-holder {
+        font-size: 30px;
     }
 
     .post-content img {
